WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93388
REGRESSION (
r123171
): <svg> element with intrinsic size and max-width gets sized incorrectly
https://bugs.webkit.org/show_bug.cgi?id=93388
Summary
REGRESSION (r123171): <svg> element with intrinsic size and max-width gets si...
mitz
Reported
2012-08-07 13:22:56 PDT
REGRESSION (
r123171
): <svg> element with intrinsic size and max-width gets sized incorrectly
Attachments
Patch
(3.43 KB, patch)
2012-08-07 13:28 PDT
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-08-07 13:28:35 PDT
Created
attachment 156988
[details]
Patch
mitz
Comment 2
2012-08-07 13:32:03 PDT
<
rdar://problem/12038370
>
mitz
Comment 3
2012-08-08 10:47:10 PDT
Fixed in <
http://trac.webkit.org/r125050
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug